# ddd-toolkit

./: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
facade-tests/: Cargo.toml
facade-tests/tests/: adapters_via_facade.rs  derive_via_facade.rs  domain_flow.rs  multi_aggregate_flow.rs  serde_via_facade.rs  zeroize_via_facade.rs
scripts/: check-feature-matrix.sh
src/: lib.rs
