[package]
name = "ddd-toolkit"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Domain-Driven Design building blocks for Rust: a single-dependency facade over ddd-toolkit-core and its derive macros."
repository = "https://github.com/ryoshrimp/ddd-toolkit"
documentation = "https://docs.rs/ddd-toolkit"
readme = "README.md"
keywords = ["ddd", "domain-driven-design", "entity", "value-object", "aggregate"]
categories = ["rust-patterns", "data-structures"]
exclude = [".github"]

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["ddd-toolkit-core", "ddd-toolkit-macro", "facade-tests"]


[dependencies]
ddd-toolkit-core = { version = "0.2.0", path = "ddd-toolkit-core" }
ddd-toolkit-macro = { version = "0.2.1", path = "ddd-toolkit-macro", optional = true }


[features]
default = ["derive"]
derive = ["dep:ddd-toolkit-macro"]
chrono = ["ddd-toolkit-core/chrono"]
uuid = ["ddd-toolkit-core/uuid"]
zeroize = ["ddd-toolkit-macro/zeroize"]

# ddd-toolkit-macro is developed as its own standalone repo/crate and
# declares its ddd-toolkit-core dependency via git tag so it builds on its
# own. Inside this workspace both crates are also checked out locally as
# submodules, so redirect that git dependency to the local path: otherwise
# Cargo compiles two separate copies of ddd-toolkit-core side by side, and
# local edits to ddd-toolkit-core are invisible to ddd-toolkit-macro's own
# build/tests within this workspace.
[patch."https://github.com/ryoshrimp/ddd-toolkit-core.git"]
ddd-toolkit-core = { path = "ddd-toolkit-core" }
