[package]
name = "ddd-toolkit"
version = "0.1.5"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Domain-Driven Design building blocks for Rust: a single-dependency facade over ddd-toolkit-core and its derive macros."
repository = "https://github.com/ryoshrimp/ddd-toolkit"
documentation = "https://docs.rs/ddd-toolkit"
readme = "README.md"
keywords = ["ddd", "domain-driven-design", "entity", "value-object", "aggregate"]
categories = ["rust-patterns", "data-structures"]
exclude = [".github", "scripts"]

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["facade-tests"]


[dependencies]
ddd-toolkit-core = "0.2.2"
ddd-toolkit-macro = { version = "0.2.3", optional = true }


[features]
default = ["derive"]
derive = ["dep:ddd-toolkit-macro"]
chrono = ["ddd-toolkit-core/chrono"]
uuid = ["ddd-toolkit-core/uuid"]
zeroize = ["ddd-toolkit-macro/zeroize"]
